--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@react-pdf/renderer": "^3.0.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "axios": "^0.24.0",
+    "framer-motion": "^4.1.17",
+    "pattern.css": "^1.0.0",
+    "react": "^17.0.2",
+    "react-css-modules": "^4.7.11",
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.4",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
